--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,8 @@
 {deps, [
 	{ex_fcgi, "1.0.0",
 		{git, "git://github.com/extend/ex_fcgi.git", {tag, "1.0.0"}}},
-	{cowboy, "2.0.0-rc.4",
-		{git, "git://github.com/extend/cowboy.git", {tag, "2.0.0-rc.4"}}}
+	{cowboy, "2.0.0",
+		{git, "git://github.com/extend/cowboy.git", {tag, "2.0.0"}}}
 ]}.
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
 {erl_opts, [
