--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {cover_enabled, true}.
 {deps, [
-	{ex_fcgi, "1.0.0",
-		{git, "git://github.com/extend/ex_fcgi.git", {tag, "1.0.0"}}},
+	{ex_fcgi, "1.0.1",
+		{git, "git://github.com/unix1/ex_fcgi.git", {tag, "1.0.1"}}},
 	{cowboy, "2.0.0",
 		{git, "git://github.com/extend/cowboy.git", {tag, "2.0.0"}}}
 ]}.
