Update for rebar3
This closes #3, and breaks dialyze command which will be fixed later
with the change to erlang.mk.

--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,12 @@
 {cover_enabled, true}.
 {deps, [
-	{ex_fcgi, "1.0.2",
-		{git, "git://github.com/unix1/ex_fcgi.git", {tag, "1.0.2"}}},
-	{cowboy, "2.0.0",
-		{git, "git://github.com/extend/cowboy.git", {tag, "2.0.0"}}}
+    {ex_fcgi, ".*", {git, "https://github.com/unix1/ex_fcgi.git", {tag, "1.0.2"}}},
+    {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", {tag, "2.0.0"}}}
 ]}.
-{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
+{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./logs"}]}}]}.
 {erl_opts, [
 %%	bin_opt_info,
-%%	warn_missing_spec,
-	warnings_as_errors,
-	warn_export_all
+%%  warn_missing_spec,
+    warnings_as_errors,
+    warn_export_all
 ]}.
