Move Makefile to erlang.mk
Closes #4.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-.cowboy_fcgi_dialyzer.plt
+.erlang.mk/
 .eunit/
 .idea/
 .rebar/
+*.plt
 *.kdev4
 _build/
+cowboy_fcgi.d
 cowboy_fcgi.iml
 deps/
 ebin/
